--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 							<ul class="icons">
 								<li><a href="https://twitter.com/naitsabes" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.instagram.com/seba787/" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.github.com/seba787/" class="fa-github">GitHub</a></li>
+								<li><a href="mailto:naitsabes787@gmail.com" class="fa-envelope">E-mail</a></li>
 							</ul>
 						</footer>
 					</section>
